// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure should render an image with alt text 1`] = `
<Figure>
  <RelativeDiv>
    <Image
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    />
    <noscript>
      <Image
        alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      />
    </noscript>
  </RelativeDiv>
</Figure>
`;

exports[`Figure should render caption text 1`] = `
<Figure>
  <RelativeDiv>
    <Image
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    />
    <noscript>
      <Image
        alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      />
    </noscript>
  </RelativeDiv>
  <Text
    paragraphOverride={[Function]}
    text="This is a caption"
  />
</Figure>
`;

exports[`Figure should render copyright text 1`] = `
<Figure>
  <RelativeDiv>
    <Image
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    />
    <noscript>
      <Image
        alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      />
    </noscript>
    <Copyright>
      Getty Images
    </Copyright>
  </RelativeDiv>
</Figure>
`;
